# crewai_example

./: README.md  pyproject.toml
src/crewai_example/: crew.py  main.py
